--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,24 @@
 spring.application.name=MPMT
 
-#spring.datasource.url=jdbc:mariadb://localhost:3306/mpmt
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#Config database
+spring.datasource.url=jdbc:mysql://localhost:33061/mpmt
+spring.datasource.username=mpmt
+spring.datasource.password=mpmt
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/mpmt
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.hibernate.ddl-auto=create-drop
-
-
-#spring.jpa.hibernate.ddl-auto=create-update
+#Config mail
 spring.mail.host=localhost
 spring.mail.port=1025
 spring.mail.username=<your-username>
 spring.mail.password=<your-password>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
