--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=MPMT
 
 #Config database
-spring.datasource.url=jdbc:mysql://localhost:33061/mpmt
+spring.datasource.url=jdbc:mysql://localhost:3306/mpmt
 spring.datasource.username=mpmt
 spring.datasource.password=mpmt
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,3 +22,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
