--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,3 +36,16 @@ jobs:
 
       - name: Run Tests
         run: mvn test
+
+      # Étape 7 : Connexion à Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      # Étape 8 : Build et Push de l'image Docker
+      - name: Build and Push Docker image
+        run: |
+          docker build -t dupy007/api_mpmt:latest .
+          docker push dupy007/api_mpmt:latest
